<resources>
    <string name="app_name">MSH Custom</string>
    <string name="home_title">Spare Part Motor Honda CB klasik</string>
    <string name="select_categories">Pilih Produk</string>
    <string name="loading_categories">Memuat Produk...</string>
    <string name="something_wrong">Ups.., sepertinya ada yang salah!</string>
    <string name="try_again">Coba Lagi</string>
    <string name="title_search_tips">Lebih Cepat...</string>
    <string name="search_tips">Temukan barang yang kamu inginkan hanya dengan memasukkan kata kunci pada pencarian</string>
    <string name="select_products">Daftar Produk</string>
    <string name="loading_products">Memuat Produk...</string>
    <string name="empty_product">Barang Tidak DItemukan</string>
    <string name="empty_product_message">Barang yang dicari tidak ditemukan, silahkan masukkan kata kunci lainnya</string>
    <string name="empty_category">Kategori Tidak DItemukan</string>
    <string name="empty_category_message">Kategori yang dicari tidak ditemukan, silahkan masukkan kata kunci lainnya</string>
    <string name="add_to_cart">Telah ditambahkan ke keranjang belanjaan</string>
    <string name="detail_product">Detail Produk</string>
    <string name="add_product_to_cart">Tambah Ke Keranjang</string>
    <string name="cart">Keranjang</string>
    <string name="empty_cart">Keranjang Kosong</string>
    <string name="empty_cart_message">Keranjang anda masih kosong. silahkan pilih barang yang ingin dibeli</string>
    <string name="shoping_now">Belanja Sekarang</string>
    <string name="buy">Beli</string>
    <string name="total">Total</string>
    <string name="search">Pencarian</string>
    <string name="address_send">Alamat Pengiriman</string>
    <string name="checkout">Checkout</string>
    <string name="enter_address">Inputkan alamat anda...</string>
    <string name="total_price">Total Harga</string>
    <string name="shipment_fee">Ongkos Kirim</string>
    <string name="total_pay">Total Bayar</string>
    <string name="make_payment">Buat Pembayaran</string>
    <string name="choose_payment">Pilih metode pembayaran</string>
    <string name="product_name">Nama Barang</string>
    <string name="buy_quantity">Jumlah Pembelian</string>
    <string name="select_payment">Pilih metode Pembayaran</string>
    <string name="transaction">Pembayaran</string>
    <string name="account_number">No. Rekening</string>
    <string name="payment_remain">Sisa waktu pembayaran</string>
    <string name="copied">Berhasil Disalin</string>
    <string name="loading_data">Memuat data...</string>
    <string name="stock">Stok</string>
    <string name="loading_transaction">Memuat pembayaran...</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_have_account">"Belum punya akun?  "</string>
    <string name="register">Daftar</string>
    <string name="name">Nama lengkap</string>
    <string name="confirm_password">Konfirmasi password</string>
    <string name="have_account">"Sudah punya akun?  "</string>
    <string name="login_form_empty">Email atau password kosong!</string>
    <string name="loading_login">Login...</string>
    <string name="login_failed">Email atau password salah!</string>
    <string name="register_form_empty">Mohon isi semua form pendaftaran!</string>
    <string name="register_confirm_password">Password tidak sesuai!</string>
    <string name="loading_register">Mendaftar...</string>
    <string name="register_failed">Gagal mendaftar, harap coba lagi...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="my_profile">Profile ku</string>
    <string name="my_transaction">Pesanan ku</string>
    <string name="comming_soon">Coming soon...</string>
    <string name="upload_transaction_nota">Unggah bukti Transfer</string>
    <string name="back_to_home">Kembali ke beranda</string>
    <string name="time_out_message">Maaf!\nwaktu pembayaran telah habis</string>
    <string name="choose_image">Pilih Gambar</string>
    <string name="change_image">Ganti gambar</string>
    <string name="upload">Kirim</string>
    <string name="process">Proses...</string>
    <string name="loading_upload">Mengunggah...</string>
    <string name="title_dialog_uploadimage">Pilih gambar</string>
    <string name="camera">Ambil Gambar</string>
    <string name="galery">Buka Galery</string>
    <string name="validation_sended">Selamat anda berhasil.\nbukti transfer berhasil dikirim</string>

</resources>