<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/colorAccent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.upload.UploadActivity">


    <LinearLayout
        android:id="@+id/main_upload_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_imageview"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="@string/upload_transaction_nota"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:scaleType="centerInside" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/upload_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/image_preview_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_margin="30dp"
                    android:contentDescription="@string/nav_header_desc"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    app:srcCompat="@drawable/ic_menu_gallery" />

            </LinearLayout>

            <Button
                android:id="@+id/change_image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_shape_2"
                android:minHeight="60dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/change_image"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Button
                android:id="@+id/send_image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_shape_3"
                android:minHeight="60dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/upload"
                android:textAllCaps="false"
                android:textColor="@color/textColorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <include
            android:id="@+id/loading_layout"
            layout="@layout/loading_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone" />

        <include
            android:id="@+id/error_layout"
            layout="@layout/error_message_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/message_upload_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/sended" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/validation_sended"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/back_to_home_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_shape_3"
            android:minHeight="60dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/back_to_home"
            android:textAllCaps="false"
            android:textColor="@color/textColorWhite"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>