<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ui.activity.transaction.TransactionActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_imageview"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="@string/transaction"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:scaleType="centerInside" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/transaction_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_pay"
                android:textColor="@color/textColorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/total_payment_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rp. -"
                android:textColor="@color/textColorGreen"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_number"
                        android:textColor="@color/textColorWhite"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/payment_detail_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="xxx-xxxx-xxxxxx"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/copy_imageview"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/copy" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_remain"
                android:textColor="@color/textColorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/remain_time_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="58 menit 23 detik"
                android:textColor="@color/textColorRed"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/loading_layout"
        layout="@layout/loading_data_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone" />

    <include
        android:id="@+id/error_layout"
        layout="@layout/error_message_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone" />



</LinearLayout>