<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.activity.loginOrRegister.LoginOrRegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/icn" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" />

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/layout_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="-15dp"
                app:cardCornerRadius="20dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                tools:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/register"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:orientation="vertical">

                    </LinearLayout>

                    <EditText
                        android:id="@+id/register_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/register_email_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/register_password_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColorHint="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/confirm_password_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColorHint="@color/colorPrimary" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:orientation="vertical" />

                    <Button
                        android:id="@+id/register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@drawable/rounded_shape_3"
                        android:minHeight="40dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/textColorWhite"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/have_account"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <TextView

                            android:id="@+id/to_login_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/login"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="-15dp"
                app:cardCornerRadius="20dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/login"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:orientation="vertical" />

                    <EditText
                        android:id="@+id/login_email_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/login_password_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColorHint="@color/colorPrimary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical" />

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@drawable/rounded_shape_3"
                        android:minHeight="40dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/textColorWhite"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/not_have_account"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/to_register_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/register"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <include
                android:id="@+id/loading_layout"
                layout="@layout/loading_data_layout"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="bottom"
                tools:visibility="gone" />

            <include
                android:id="@+id/error_layout"
                layout="@layout/error_message_layout"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="bottom"
                tools:visibility="gone" />

        </FrameLayout>


    </FrameLayout>


</LinearLayout>